# Ldap-User-Web

./: .gitignore  README.md  config.ini  pyproject.toml  setup.cfg  setup.py
userweb/: __init__.py  resources.py  security.py  tests.py  views.py
userweb/static/: app.css  diceware.js
userweb/static/lists/: eff.js
userweb/templates/: add_computer.pt  add_user.pt  change_groups.pt  change_pw.pt  computers.pt  group_select.pt  head.pt  home.pt  login.pt  messages.pt  nav.pt  remove.pt  remove_user.pt  users.pt
