[metadata]
name = userweb
description = A simple web interface for managing LDAP users

[options]
packages=find:
install_requires = 
    usermanagement
    pyramid
    pyramid_chameleon
    waitress
    pycryptodome

[options.entry_points]
paste.app_factory = 
    main = userweb:main

[options.extras_require]
dev = 
    pyramid_debugtoolbar
    pytest
    webtest
